// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site admin user info nav bar test Basic render test (has no transcript link) 1`] = `
<div
  className="site-admin-card site-admin-user-nav-bar"
>
  <div
    className="site-admin-user-identity"
  >
    <img
      className="avatar avatar avatar-color-6"
      src="unresolved-user-avatar.png"
    />
    <span
      className="username"
      rel="author"
    />
    <div
      className="actions"
    >
      <span
        className="email"
      >
        <a
          href="mailto:testUser@test.com"
        >
          Email
        </a>
      </span>
      <div
        className="nti-link-to-path profile"
        to="#"
      >
        <i
          className="icon-goto"
        />
        <span>
          Profile
        </span>
      </div>
    </div>
  </div>
  <div
    className="site-admin-tabs-container"
  >
    <ul
      className="unadorned-list site-admin-tabs"
    >
      <li>
        <div
          className="nti-link-to-path"
          exact={true}
          to="./"
        >
          Overview
        </div>
      </li>
      <li />
      <li />
      <li />
      <li>
        <div
          className="nti-link-to-path"
          to="./reports"
        >
          Reports
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Site admin user info nav bar test Basic render test (has transcript link) 1`] = `
Array [
  <div
    className="site-admin-card site-admin-user-nav-bar"
  >
    <div
      className="site-admin-user-identity"
    >
      <img
        className="avatar avatar avatar-color-6"
        src="unresolved-user-avatar.png"
      />
      <span
        className="username"
        rel="author"
      />
      <div
        className="actions"
      >
        <span
          className="email"
        >
          <a
            href="mailto:testUser@test.com"
          >
            Email
          </a>
        </span>
        <div
          className="nti-link-to-path profile"
          to="#"
        >
          <i
            className="icon-goto"
          />
          <span>
            Profile
          </span>
        </div>
      </div>
    </div>
    <div
      className="site-admin-tabs-container"
    >
      <ul
        className="unadorned-list site-admin-tabs"
      >
        <li>
          <div
            className="nti-link-to-path"
            exact={true}
            to="./"
          >
            Overview
          </div>
        </li>
        <li />
        <li />
        <li>
          <div
            className="nti-link-to-path"
            to="./transcript"
          >
            Transcript
          </div>
        </li>
        <li>
          <div
            className="nti-link-to-path"
            to="./reports"
          >
            Reports
          </div>
        </li>
      </ul>
    </div>
  </div>,
  <div
    className="site-admin-card"
  >
    <a
      className="nti-button button primary"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      Update Email
    </a>
  </div>,
]
`;
